operator/pkg/model/ingestion/testdata/gateway/frontend_tls_default_validation_with_AllowValidOnly_mode/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - kind: ConfigMap
              name: ca-cert
          mode: AllowValidOnly
