operator/pkg/model/ingestion/testdata/gateway/frontend_tls_default_validation_with_AllowValidOnly_mode/output-listeners.yaml
- hostname: '*'
  frontend_tls_validation:
    ca_cert_refs:
      - kind: ConfigMap
        name: ca-cert
        namespace: default
    require_client_certificate: true
  name: https
  port: 443
  sources:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw
      namespace: default
      version: v1
